src/test/deca/context/invalid/sansObj/print-no-guill.deca
// Description:
//    Print d'une variable non définie
//
// Résultat:
//variable non definie


{
        println(Hello);
}